185/ Implemented new change to relic and also adjusted Relic RNG.
186/ Deleted Triple Debuff Template because the condition for the template is too difficult.
187/ Deleted CombatV4Template template because it is too bloated.
188/ Update World generation to add in many mini forest
189/ Changed relic set activation condition.
190/ Added Defenses Up relic set.
191/ Reworked Minishark.
192/ Added Cursed Kingdom from ModJam2 mod.
193/ Renamed ModAchievement system to RoguelikeAchievement
194/ Simplified the functionality of PlayerStatsHandler.AddStatsToPlayer
195/ Lead Irradiation now have effect on player.
196/ Work on some localization of the mod.
197/ A lot of fixes and patched on world biome handler.
198/ Better Keen potion buff check.
199/ Deleted Altar tile due to no longer needing it.
200/ Update the mod's description.
201/ Patched up Update World Inner method.
202/ Added Weaken skill.
203/ Fixed a bug caused by Staff overhaul.
204/ Added more subworld for boss.
205/ Buffed The Orbit.
206/ Buffed The Two Evil.
207/ Buffed The Tundra Bow.
208/ Minor optimization.
209/ Made it easier to reuse portal projectile for future subworld.
210/ Fixed Potential bug that would caused the world generation to generate multiple time.
211/ Overall work on LootBox lord to make it more playable.
212/ Reworked Platinum Bow.
213/ Minor code clean up.
214/ Finish up Lootbox Lord boss fight
215/ Deleted config option Roguelike Mode to avoid confusion when configuring the mod.
216/ Updated Localization for better explanation of the configuration setting.
217/ Significantly buff Copper Bow wait mechanic.
218/ Updated visual indicator for Unforgiving to make it feel better to play.
219/ Fixed a infinite reclusion bug caused by Gold Armor.
220/ Added entrance structure to Corruption, Crimson, FleshRealm and Slime World subworld.
221/ Added new entrance structure into the world generation.
222/ Updated Cursed Kingdom entrance structure.