@@ -1,4 +1,4 @@
 displayName = Everlasting Unstablet Alpha
 author = Xinim
-version = 0.0.11
+version = 0.0.12
 modReferences  = StructureHelper@3.0, SubworldLibrary
